linux config: Generic: add dwmac-intel ethernet driver
Missing support was reported in forum:
https://forum.libreelec.tv/thread/29117-intel-ec1000s-nic-support-for-le/

--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -2338,7 +2338,12 @@ CONFIG_SIS190=y
 # CONFIG_NET_VENDOR_SOLARFLARE is not set
 # CONFIG_NET_VENDOR_SMSC is not set
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
-# CONFIG_NET_VENDOR_STMICRO is not set
+CONFIG_NET_VENDOR_STMICRO=y
+CONFIG_STMMAC_ETH=y
+# CONFIG_STMMAC_SELFTESTS is not set
+# CONFIG_STMMAC_PLATFORM is not set
+CONFIG_DWMAC_INTEL=y
+# CONFIG_STMMAC_PCI is not set
 # CONFIG_NET_VENDOR_SUN is not set
 CONFIG_NET_VENDOR_SYNOPSYS=y
 # CONFIG_DWC_XLGMAC is not set
@@ -2354,7 +2359,7 @@ CONFIG_VIA_VELOCITY=y
 # CONFIG_NET_VENDOR_XILINX is not set
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
-CONFIG_PHYLINK=m
+CONFIG_PHYLINK=y
 CONFIG_PHYLIB=y
 CONFIG_SWPHY=y
 # CONFIG_LED_TRIGGER_PHY is not set
@@ -2438,7 +2443,7 @@ CONFIG_MDIO_DEVRES=y
 #
 # PCS device drivers
 #
-# CONFIG_PCS_XPCS is not set
+CONFIG_PCS_XPCS=y
 # end of PCS device drivers
 
 CONFIG_PPP=m
