Amlogic-no: enable CFI_PERMISSIVE for clang Kernel modules (DVB with dvb_attach) using function pointer from other kernel modules will trigger cfi trap. Continue program execution by set '-fsanitize-recover=cfi'.

--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -666,7 +666,7 @@ CONFIG_LTO_CLANG_THIN=y
 CONFIG_ARCH_SUPPORTS_CFI_CLANG=y
 CONFIG_CFI_CLANG=y
 CONFIG_CFI_CLANG_SHADOW=y
-# CONFIG_CFI_PERMISSIVE is not set
+CONFIG_CFI_PERMISSIVE=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
